--- a/Serenity_Sanctury_v1/Views/Admin/Index.cshtml
+++ b/Serenity_Sanctury_v1/Views/Admin/Index.cshtml
@@ -2,17 +2,20 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Title"] = "Home Page";
+    /*ViewData["Title"] = "Home Page";*/
 }
 
 <div class="text-center">
     <h1 class="display-4">Admin Page</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
 <div>
     <form class="form-signin">
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <label for="inputFirstName" class="sr-only">First Name</label>
+        <input type="text" id="inputFirstName" class="form-control" placeholder="First Name" required autofocus>
+        <label for="inputLastName" class="sr-only">Last Name</label>
+        <input type="text" id="inputEmail" class="form-control" placeholder="Last Name" required autofocus>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
