--- a/Serenity_Sanctury_v1/Views/Home/Index.cshtml
+++ b/Serenity_Sanctury_v1/Views/Home/Index.cshtml
@@ -5,4 +5,8 @@
 <div class="text-center">
     <h1 class="display-4">Welcome from Our Candle Store</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+
+
+    <a asp-area="" asp-controller="Admin" asp-action="ManageProducts" >Click this link for manage products</a>
 </div>
