ProductDetails works successfully and fully.

--- a/Serenity_Sanctury_v1/Views/Admin/Edit.cshtml
+++ b/Serenity_Sanctury_v1/Views/Admin/Edit.cshtml
@@ -40,9 +40,9 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="Color">Color</label>
-        <input asp-for="Color" class="form-control">
-        <span asp-validation-for="Color" class="text-danger"></span>
+        <label asp-for="Container">Container</label>
+        <input asp-for="Container" class="form-control">
+        <span asp-validation-for="Container" class="text-danger"></span>
     </div>
 
     <div class="form-group">
