--- a/Serenity_Sanctury_v1/Views/Products/Index.cshtml
+++ b/Serenity_Sanctury_v1/Views/Products/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@*
     ViewData["Title"] = "Products Page";
 *@
-
+@model IEnumerable<Serenity_Sanctury_v1.Models.Product>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -9,209 +9,25 @@
 <div class="album py-5">
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
-                <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="~/Image/product2.jpeg" alt="Candle Product 1">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h3 class="card-text">Honeyed Harmony</h3>
-                            <h4 class="product-price">$10.99</h4>
-                        </div>
-                        <div class="mt-3">
-                            <button type="button" class="btn1 btn-sm btn-outline-secondary">View More</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="~/Image/product3.jpeg" alt="Candle Product 2">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h3 class="card-text">Serenity Blossom</h3>
-                            <h4 class="product-price">$12.99</h4>
-                        </div>
-                        <div class="mt-3">
-                            <button type="button" class="btn1 btn-sm btn-outline-secondary">View More</button>
+            @foreach (var product in Model)
+            {
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <img class="card-img-top" src="@Url.Content(product.ImageUrl)" alt="@product.ProductName">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <h3 class="card-text">@product.ProductName</h3>
+                                <h4 class="product-price"> @product.Price.ToString("C")</h4>
+                            </div>
+                            <div class="mt-3">
+                                <button type="button" class="btn1 btn-sm btn-outline-secondary" onclick="location.href='@Url.Action("ProductDetails", "Products", new { id = product.ProductID })'">
+                                    View More
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="~/Image/product4.jpeg" alt="Essential Oil Product 3">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h3 class="card-text">Soothing Sandalwood Essence</h3>
-                            <h4 class="product-old-price">$15.50</h4>
-                            <h4 class="product-price">$9.99</h4>
-                        </div>
-                        <div class="mt-3">
-                            <button type="button" class="btn1 btn-sm btn-outline-secondary">View More</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-md-4">
-                <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="~/Image/product4.jpeg" alt="Essential Oil Product 4">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h3 class="card-text">Invigorating Tea Tree</h3>
-                            <h4 class="product-old-price">$15.50</h4>
-                            <h4 class="product-price">$9.99</h4>
-                        </div>
-                        <div class="mt-3">
-                            <button type="button" class="btn1 btn-sm btn-outline-secondary">View More</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="~/Image/product2.jpeg" alt="Candle Product 5">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h3 class="card-text">Tranquil Twiligh</h3>
-                            <h4 class="product-price">$10.99</h4>
-                        </div>
-                        <div class="mt-3">
-                            <button type="button" class="btn1 btn-sm btn-outline-secondary">View More</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="~/Image/product3.jpeg" alt="Candle Product 6">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h3 class="card-text">Lavender Dreams</h3>
-                            <h4 class="product-price">$12.99</h4>
-                        </div>
-                        <div class="mt-3">
-                            <button type="button" class="btn1 btn-sm btn-outline-secondary">View More</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="~/Image/product3.jpeg" alt="Candle Product 7">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h3 class="card-text">Rose Petal Oasis</h3>
-                            <h4 class="product-price">$12.99</h4>
-                        </div>
-                        <div class="mt-3">
-                            <button type="button" class="btn1 btn-sm btn-outline-secondary">View More</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="~/Image/product2.jpeg" alt="Candle Product 8">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h3 class="card-text">Citrus Sunrise</h3>
-                            <h4 class="product-price">$10.99</h4>
-                        </div>
-                        <div class="mt-3">
-                            <button type="button" class="btn1 btn-sm btn-outline-secondary">View More</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-md-4">
-                <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="~/Image/product4.jpeg" alt="Essential Oil Product 9">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h3 class="card-text">Lemongrass Harmony</h3>
-                            <h4 class="product-old-price">$15.50</h4>
-                            <h4 class="product-price">$12.99</h4>
-                        </div>
-                        <div class="mt-3">
-                            <button type="button" class="btn1 btn-sm btn-outline-secondary">View More</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-md-4">
-                <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="~/Image/product2.jpeg" alt="Candle Product 10">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h3 class="card-text">Berry Bliss</h3>
-                            <h4 class="product-price">$12.99</h4>
-                        </div>
-                        <div class="mt-3">
-                            <button type="button" class="btn1 btn-sm btn-outline-secondary">View More</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="~/Image/product2.jpeg" alt="Candle Product 11">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h3 class="card-text">Vanilla Velvet</h3>
-                            <h4 class="product-price">$10.99</h4>
-                        </div>
-                        <div class="mt-3">
-                            <button type="button" class="btn1 btn-sm btn-outline-secondary">View More</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="~/Image/product3.jpeg" alt="Candle Product 12">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h3 class="card-text">Ocean Breeze Bliss</h3>
-                            <h4 class="product-price">$10.99</h4>
-                        </div>
-                        <div class="mt-3 text-start">
-                            <button type="button" class="btn1 btn-sm btn-outline-secondary">View More</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="~/Image/product5.jpeg" alt="Aroma Diffuser Product 13">
-                    <div class="card-body">
-                        <h3 class="card-text">Classic Design Aroma Diffuser</h3>
-                        <h4 class="product-old-price">$79.99</h4>
-                        <h4 class="product-price">$49.99</h4>
-                    </div>
-                    <span>Available colors</span>
-                    <div class="colors">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                </div>
-            </div>
+            }
 
         </div>
     </div>
