--- a/Serenity_Sanctury_v1/Views/Shared/_Layout.cshtml
+++ b/Serenity_Sanctury_v1/Views/Shared/_Layout.cshtml
@@ -31,9 +31,7 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
-                        </li>
+                        
                         <!-- Search form -->
                         <li class="nav-item ms-auto">
                             <form class="d-flex" role="search">
@@ -41,13 +39,51 @@
                                 <button class="btn btn-outline-success" type="submit">Search</button>
                             </form>
                         </li>
-                        <li class="nav-item ms-auto">
-                            <a class="nav-link" style="font-size:12px; text-align: center" asp-area="" asp-controller="Home" asp-action="Profile">
-                                <img src="~/Image/profile1.png" alt="Profile" style="height: 35px; width: 35px;"><br>Login/ Signup
+                       @*  <li class="nav-item ms-auto">
+                            <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Login
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Cart">
+                            <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Register">Register
+                            </a>
+                        </li> *@
+                        <!-- These Login buttons and links could be a partial class or a view component -->
+                        @using Microsoft.AspNetCore.Identity
+                        @inject SignInManager<User> signInManager
+                        @if (signInManager.IsSignedIn(User))
+                        {
+                            // signed-in user - Log Out button and username and change password link
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Profile">
+                                    Profile
+                                </a>
+                            </li>
+                            <li class="nav-item">
+
+                                 <form method="post" asp-action="LogOut" asp-controller="Account"
+                                      asp-area="">
+                                    <input type="submit" value="Log Out"
+                                           class="btn btn-outline-light" />
+                                    <span class="text-light">@User.Identity?.Name</span>
+                                </form> 
+                            </li>
+                        }
+                        else
+                        {
+                            // anonymous user - Register link and Log In button
+                            <li class="nav-item ms-auto">
+                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">
+                                    Login
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Register">
+                                    Register
+                                </a>
+                            </li>
+                        }
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Cart" asp-action="Index">
                                 <img src="~/Image/cart1.png" alt="Cart" style="height: 45px; width: 45px;"></a>
                         </li>
                     </ul>
