--- a/Serenity_Sanctury_v1/Views/Shared/_Layout.cshtml
+++ b/Serenity_Sanctury_v1/Views/Shared/_Layout.cshtml
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Serenity_Sanctury_v1</title>
+    <title> Serenity Sanctuary</title>
+    <link href="Image/SLogo.png" rel="icon">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Serenity_Sanctury_v1.styles.css" asp-append-version="true" />
@@ -99,7 +100,7 @@
     </div>
 
     <div class="container">
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-3 border-top">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center mt-5 border-top">
             <div class="col-md-4 d-flex align-items-center">
                  &copy; 2024 - Serenity_Sanctury_v1 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
