--- a/Serenity_Sanctury_v1/Views/Account/Login.cshtml
+++ b/Serenity_Sanctury_v1/Views/Account/Login.cshtml
@@ -6,37 +6,37 @@
 }
 @using Serenity_Sanctury_v1.ViewModels
 @model LoginViewModel
+<body style="background-image:url('@Url.Content("~/Image/loginBg6.jpg")');background-size: cover;height:100vh;">
+    <div class="container">
+        <form asp-action="Login" class="login-form">
+            <div class="mb-3 bg p-5 rounded" style="box-shadow: 1px 1px 5px 5px #8967B3;">
+                <h2 class="text-center mb-4">Login</h2>
 
-<div class="row">
-    <div class="col-md-6 offset-3">
-        <p>
-            <h4>Log in to your account</h4>
-        </p>
-        @if (TempData["Error"] != null)
-        {
-            <div class="col-md-12 alert alert-danger">
-                <span><b>Sorry!</b> - @TempData["Error"]</span>
-            </div>
-        }
-      <div class="row">
-            <div class="col-md-8 offset-2">
-                <form asp-action="Login">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <div class="form-group">
-                        <label asp-for="Email" class="control-label"></label>
-                        <input asp-for="Email" class="form-control">
-                        <span asp-validation-for="Email" class="text-danger"></span>
+                @* Display error message if present *@
+                @if (TempData["Error"] != null)
+                {
+                    <div class="col-md-12 alert alert-danger">
+                        <span><b>Sorry!</b> - @TempData["Error"]</span>
                     </div>
-                    <div class="form-group">
-                        <label asp-for="Password" class="control-label"></label>
-                        <input asp-for="Password" class="form-control" />
-                        <span asp-validation-for="Password" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <input class="btn btn-outline-success float right" type="submit" value="Log in" />
-                        <a class="btn btn-outline-secondary" asp-controller="Club" asp-action="Index">Cancel</a>
-                    </div>
-                </form>
-            </div> 
+                }
+
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group mt-4">
+                    <label asp-for="Email" class="control-label fw-bold"></label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <div class="form-group mt-4">
+                    <label asp-for="Password" class="control-label fw-bold"></label>
+                    <input asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="form-group d-flex justify-content-center mt-3">
+                    <input class="btn btn-outline-success float-right w-50 mt-3 fw-bold" type="submit" value="Log in" />
+                    <a class="btn btn-outline-secondary ms-4 mt-3 w-50 fw-bold" asp-controller="Club" asp-action="Index">Cancel</a>
+                </div>
+            </div> <!-- Closing tag fixed -->
+        </form>
     </div>
-</div>
+</body>
+
