--- a/Serenity_Sanctury_v1/Views/Home/Index.cshtml
+++ b/Serenity_Sanctury_v1/Views/Home/Index.cshtml
@@ -20,7 +20,9 @@
                 <p class="para">At Serenity Sanctuary, we believe in the transformative power of fragrance and light. Each of our candles is meticulously hand-poured using the finest natural ingredients, ensuring a clean burn and a delightful scent that lingers. Whether you seek tranquility, inspiration, or a touch of luxury, our diverse collection caters to every mood and occasion. Discover the perfect blend of elegance and comfort with our unique fragrances, and let Serenity Sanctuary illuminate your moments with warmth and serenity. Explore our range today and bring a touch of enchantment into your home.</p>
             </div>
             <a class="btn btn-lg btn-first" asp-area="" asp-controller="Products" asp-action="Index" role="button">Shop Now</a>
-            <br /><a asp-area="" asp-controller="Admin"  asp-action="ManageProducts">Click this link for manage products</a>
+            @*
+                <a asp-area="" asp-controller="Admin"  asp-action="ManageProducts">Click this link for manage products</a>
+            *@
     </div>
 </section>
 </body>
