some changes in Manage products

--- a/Serenity_Sanctury_v1/Views/Admin/ManageProducts.cshtml
+++ b/Serenity_Sanctury_v1/Views/Admin/ManageProducts.cshtml
@@ -7,13 +7,16 @@
 <h1 class="text-center text-decoration-underline mt-4">Product List</h1>
 <a class="admin p-2 text-white rounded fw-bold mt-4 mb-4 text-center" style="background-color:forestgreen; text-decoration:none;width:200px; display:inline-block;" asp-controller="Admin" asp-action="Add">Add New Product</a>
 <table class="table table-bordered table-striped">
-    <thead>
+    <thead class="align-middle fs-5" style="color:#7776B3;">
         <tr>
             <th>Name</th>
             <th>Category</th>
             <th>Description</th>
-            <th>Color</th>
+            <th>Scent</th>
+            <th>Container</th>
+            <th>Size</th>
             <th>Price</th>
+            <th>Burn Time</th>
             <th>Quantity</th>
             <th>Image</th>
         </tr>
