--- a/Serenity_Sanctury_v1/Views/Shared/_Layout.cshtml
+++ b/Serenity_Sanctury_v1/Views/Shared/_Layout.cshtml
@@ -42,9 +42,13 @@
                         </li>
 
                         @*Admin Page NavBar*@
-                        <li class="nav-item ms-auto">
-                            <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="ManageProducts">Admin</a>
-                        </li>
+
+                        @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item ms-auto">
+                                <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="ManageProducts">Admin</a>
+                            </li>
+                        }
                        @*  <li class="nav-item ms-auto">
                             <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Login
                             </a>
